bug: fixed styles: background image too large, character characteristics were jumping lines

--- a/src/css/_characters.scss
+++ b/src/css/_characters.scss
@@ -66,7 +66,7 @@
             align-items: center;
             justify-content: space-between;
             flex-wrap: wrap;
-            padding: 1em;
+            padding: 0.8em;
         }
         &--name {
             position: absolute;
