--- a/src/css/_planets.scss
+++ b/src/css/_planets.scss
@@ -4,5 +4,5 @@
     padding-top: 50px;
     height: 100vh;
     background: url(./images/background.jpg) center;
-    background-size: cover;
+    background-repeat: repeat;
 }
